--- a/styles/index.css
+++ b/styles/index.css
@@ -83,6 +83,10 @@ button {
   background-color: #0094ff;
 }
 
+.disabled {
+  opacity: 0.5;
+}
+
 
 .validationMessage {
   color: red;
@@ -97,21 +101,83 @@ button {
 .posts {
   font-weight: 400;
   font-size: 32px;
-  opacity: 0.6;
+  color: grey;
 }
 
 
 .post__title {
   font-weight: 700;
   margin-bottom: 10px;
+  color: #000;
 }
 
 .post__text {
   margin-bottom: 35px;
+  color: #000;
 }
 
 .post__date {
   font-size: 20px;
   line-height: 30px;
   color: blue;
+}
+
+@media (max-width: 960px) {
+     .app__section-header {
+      font-size: 35px;
+
+     }
+
+     .app__header {
+      font-size: 30px;
+      margin-bottom: 40px;
+     }
+
+     .app__section {
+      gap: 40px;
+     }
+
+     .posts {
+      font-size: 22px;
+     }
+
+     .app__input,
+     .app__text,
+     .app__button {
+      font-size: 22px;
+     }
+
+}
+
+@media (max-width: 640px) {
+  .app__section {
+    gap: 25px;
+   }
+}
+
+@media (max-width: 550px) {
+  .container__app {
+    padding-top: 70px;
+  }
+
+  .app__collumn {
+    width: 100%;
+  }
+
+  .app__header {
+    margin-bottom: 30px;
+  }
+
+  .app__section {
+    flex-direction: column;
+    gap: 50px;
+   }
+
+   .blog__container {
+    row-gap: 15px;
+   }
+
+   .validationMessage {
+    margin-bottom: 25px;
+   }
 }
